# Technische-Alternative-CoE

./: .gitignore  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: pull.yml  push.yml  release.yml
custom_components/ta_coe/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  issues.py  manifest.json  panel.py  refresh_task.py  repairs.py  sensor.py  state_observer.py  state_sender.py  state_sender_v1.py  state_sender_v2.py  strings.json
custom_components/ta_coe/translations/: de.json  en.json  pt.json
custom_components/ta_coe/websocket/: __init__.py  config.py  expose.py  send.py
frontend/: angular.json  package-lock.json  package.json  tsconfig.panel.json  tsconfig.spec.json
frontend/public/i18n/: de.json  en.json
frontend/src/: panel-wrapper.ts  styles.scss
frontend/src/app/: app.config.ts  app.html  app.scss  app.ts
frontend/src/app/services/: hass.ts
frontend/src/styles/: colors.scss
tests/: __init__.py  common.py  conftest.py  const.py  test_binary_sensor.py  test_config_flow.py  test_init.py  test_sensor.py  test_state_observer.py  test_state_sender.py  test_state_sender_v1.py  test_state_sender_v2.py  test_state_sensor.py
tests/snapshots/: test_binary_sensor.ambr  test_sensor.ambr
web-ui/: README.md  angular.json  package-lock.json  package.json
web-ui/src/: index.html  panel-wrapper.ts  styles.scss
web-ui/src/app/: app.config.ts  app.html  app.scss  app.spec.ts  app.ts
web-ui/src/styles/: colors.scss
(+26 files in other folders)
