[project]
name = "ta-coe"
version = "1.5.4"
description = "The integration polls the digital and analog data from a C.M.I. via the CanOverEthernet(CoE) interface"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "DeerMaximum", email = "git983456@parabelmail.de" },
]
maintainers = [
    { name = "DeerMaximum", email = "git983456@parabelmail.de" },
]
requires-python = ">=3.13.2"
keywords = [
    "homeassistant",
    "c.m.i.",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ta-cmi==3.4.0",
]

[project.urls]
homepage = "https://github.com/DeerMaximum/Technische-Alternative-CoE"
repository = "https://github.com/DeerMaximum/Technische-Alternative-CoE"

[dependency-groups]
dev = [
    "aiohttp_cors~=0.8.1",
    "pytest-homeassistant-custom-component==0.13.308",
    "async_timeout~=5.0.1"
]
lint = [
    "ruff>=0.14.10"
]

[tool.ruff]
preview = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.uv]
default-groups = "all"
